2006-06-02  Mike Jarabek  <mjarabek@istop.com>

	* noweb/f_print.nw: Added code to check flag for vector vs. PS
	  text output in text f_print_objects().

2006-05-22  Mike Jarabek  <mjarabek@istop.com>

	* share/prolog.ps: Added custom stringwidth function to printing
	  routines that handles overbar characters.  Added overbar drawing
	  support.  The overbar thickness is coded to be 10% of the font
	  size.  The height of the overbar is set to the font size.

2006-05-21 Werner Hoch <werner.ho@gmx.de:

	* src/Makefile.am: moved the comment sign to the first column.
	  "make reconfig" is happy now.

2006-05-20 Carlos Nieves Onega <cnieves@iespana.es>

	* src/Makefile.am: Commented out the indentation of the C code, 
	so gdb can return correct information when debugging.
	
	* noweb/s_page.nw: Added one more sanity check.

	* include/struct.h: Moved rotated_inside into the TOPLEVEL structure.
	
2006-05-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * scripts/notangle_guile.in: Applied patch by Steve Brown to fix
        guile stack overflow

	* noweb/f_print.nw: Fixed missing @ which made notangle_guile a 
	little happier.

	* include/i_vars.h, include/prototype.h, include/struct.h, 
	noweb/g_rc.nw, noweb/g_register.nw, noweb/i_vars.nw,
	noweb/o_complex_basic.nw, noweb/s_toplevel.nw: Finally added code
	to support the rc keyword: always-promote-attributes.  This string
	holds a list of attribute names that are always promoted.

	* src/Makefile.am: Changed the .nw.c: rule to redirect the generated 
        C file to a temp file and then move it to the real one.  This fixes 
        the stale file problem when notangle fails.

	* noweb/s_toplevel.nw: Added missing variable init 

2006-05-17  Mike Jarabek  <mjarabek@istop.com>

	* Makefile.am, configure.ac
	  Added share directory and rule to support share directory.
	* include/i_vars.h, include/prototype.h, include/struct.h
	  Added struct variable to contain name of PostScript prolog file